# engine

./: Cargo.toml  README.md  README.me
.cargo/: config.toml
editor/: Cargo.toml
editor/src/: main.rs
engine/: Cargo.toml
engine/shaders/: text.frag  text.vert  triangle.vert
engine/src/: lib.rs
engine/src/ecs/: camera.rs  component.rs  entity.rs  mod.rs  world.rs
engine/src/gui/: button.rs  component_ref.rs  container.rs  grid.rs  layout.rs  mod.rs  panel.rs  text.rs  triangle.rs
engine/src/math/: mod.rs  transform.rs
engine/src/renderer/: buffer_utils.rs  command_pool.rs  context.rs  dynamic_rendering.rs  font.rs  mesh.rs  mod.rs  pipeline_manager.rs  render_context.rs  renderer.rs  sampled_texture.rs  shader_manager.rs  swapchain.rs  sync.rs  texture.rs  triangle.rs  vertex.rs
engine/src/window/: handler.rs  mod.rs
env/: profile
src/: custom.rs  lib.rs  main.rs
