[package]
name = "engine"
version = "0.1.0"
authors = ["Ben Gridley <bggridley1@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
image = "0.25"
winit = { version = "0.29.3", features = ["rwh_06"] }
imgui = { version = "0.12" }
imgui-rs-vulkan-renderer = { version = "1.16.0"}
imgui-winit-support = { version = "0.12.0" }
# The examples require the validation layers, which means the SDK or
# equivalent development packages should be present, so we can link
# directly and benefit from the infallible `Entry` constructor.
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug", "std"] }
ash-window = { version = "0.13.0" }