[package]
name = "engine"
version = "0.1.0"
authors = ["Ben Gridley <bggridley1@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
image = "0.25"
winit = { version = "0.29" }
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug", "std"] }
ash-window = { version = "0.13.0" }
anyhow = "1.0"
naga = { version = "0.20", features = ["glsl-in", "spv-out"] }
strum = "0.27.2"
strum_macros = "0.27.2"
bytemuck = "1.24.0"

[lib]
# This tells Cargo it’s a library crate
name = "engine"
path = "src/lib.rs"